--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ clap = { version = "4.5.1", features = ["derive"] }
 cargo_metadata = "0.18.1"
 inquire = "0.7.0"
 toml_edit = "0.22.6"
+console = { version = "0.15.8", features = ["windows-console-colors"] }
 
 [dev-dependencies]
 tempfile = "3.10.1"
