--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ console = { version = "0.15.8", features = ["windows-console-colors"] }
 [dev-dependencies]
 tempfile = "3.10.1"
 insta = "1.35.1"
+rexpect = "0.5.0"
 
 [profile.dev]
 debug = 0
