--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,11 +25,12 @@ include = [
 
 [dependencies]
 anyhow = "1.0.80"
-clap = { version = "4.5.1", features = ["derive"] }
 cargo_metadata = "0.18.1"
-inquire = "0.7.0"
-toml_edit = "0.22.6"
+clap = { version = "4.5.1", features = ["derive"] }
 console = { version = "0.15.8", features = ["windows-console-colors"] }
+inquire = "0.7.0"
+similar = { version = "2.4.0", features = ["inline"] }
+toml_edit = "0.22.6"
 
 [dev-dependencies]
 tempfile = "3.10.1"
