--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ clap = { version = "4.5.1", features = ["derive"] }
 console = { version = "0.15.8", features = ["windows-console-colors"] }
 inquire = "0.7.0"
 similar = { version = "2.4.0", features = ["inline"] }
+thiserror = "1.0.57"
 toml_edit = "0.22.6"
 
 [dev-dependencies]
