--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,8 @@ toml_edit = "0.22.6"
 [dev-dependencies]
 tempfile = "3.10.1"
 insta = "1.35.1"
+
+[target.'cfg(target_os = "linux")'.dev-dependencies]
 rexpect = "0.5.0"
 
 [profile.dev]
