--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ rustc_version = "0.4.0"
 similar = { version = "2.4.0", features = ["inline"] }
 thiserror = "1.0.57"
 toml_edit = "0.22.6"
+which = "6.0.0"
 
 [dev-dependencies]
 tempfile = "3.10.1"
