--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ which = "7.0.0"
 [dev-dependencies]
 tempfile = "3.10.1"
 insta = "1.35.1"
+rustversion = "1.0.22"
 
 [target.'cfg(target_os = "linux")'.dev-dependencies]
 rexpect = "0.6.0"
