Test Linux 1.89.0 on CI

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -17,6 +17,9 @@ jobs:
             os: ubuntu-latest
           - rust-version: nightly
             os: ubuntu-latest
+          # To test Linux version that does not default to the LLD linker
+          - rust-version: 1.89.0
+            os: ubuntu-latest
           - rust-version: stable
             os: windows-latest
           - rust-version: stable
